--- a/Главная страница/css/index.css
+++ b/Главная страница/css/index.css
@@ -3,12 +3,40 @@
     --absolute-black: #000;
     --background: #0B0B0D;
     --grey-text: #BABABA;
-    --theme-blue: #0ff;
+    --theme-blue: rgb(0, 255, 255);
+    --theme-aqua: #0C191B;
 }
 
 body {
     font-family: 'Gilroy Regular', sans-serif;
     background-color: var(--background);
+}
+
+/* Общие стили для скролла */
+body::-webkit-scrollbar {
+    width: 12px; /* Ширина полосы прокрутки */
+}
+
+/* Фон полосы прокрутки */
+body::-webkit-scrollbar-track {
+    background: linear-gradient(to bottom, #7f7f7f, #ffffff); /* Градиент от светлого к темному */
+}
+
+/* Цвет полосы прокрутки */
+body::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 255, 255, 0.75);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+}
+
+/* Когда пользователь наводит курсор на полосу прокрутки */
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+/* Убираем уголки у полосы прокрутки */
+body::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
 
 .wrapper {
@@ -331,7 +359,7 @@ body {
     /* Радиус скругления для создания эффекта свечения */
     filter: blur(10px);
     /* Размытие тени */
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);/
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
 }
 
 .trafficGeneration__button img {
@@ -985,14 +1013,70 @@ body {
     font-weight: 400;
     line-height: 110%;
     position: relative;
+    cursor: pointer;
     /* 19.8px */
 }
 
-.active { 
+.profit__content {
+    height: 394px;
+    border-radius: 20px;
+    background: #2A2A2A;
+}
+
+.profit__content-title {
+    height: 66px;
+    border-radius: 20px 20px 0px 0px;
+    background: rgba(0, 0, 0, 0.70);
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.20);
+}
+
+.profit__content-title p {
+    padding: 20px 0 20px 60px;
+    color: #BABABA;
+    font-family: Gilroy;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 130%;
+}
+
+.profit__content-title span {
+    font-weight: 500;
+}
+
+.profit__content-calc-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 60px 45px 60px;
+}
+
+.profit__content-calc-info div {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.profit__content-calc-info p {
+    color: #BABABA;
+    font-family: Gilroy;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 130%;
+
+}
+
+.profit__content-calc-info span {
+    color: var(--absolute-white);
+    font-family: Gilroy;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 130%;
+}
+
+.active {
     border: 1px solid var(--theme-blue);
 }
 
-.active::before { 
+.active::before {
     content: "";
     /* Создаем псевдоэлемент для тени */
     position: absolute;
@@ -1009,13 +1093,743 @@ body {
     /* Радиус скругления для создания эффекта свечения */
     filter: blur(10px);
     /* Размытие тени */
-    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);/
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
 }
 
 .profit__content-calc-slider {
+    color: var(--absolute-white);
     text-align: center;
-  }
-  
-  .slider {
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%;
+    position: relative;
+    margin-top: 30px;
+}
+
+.slider {
+    width: 90%;
+}
+
+.profit__slider {
+    text-align: center;
+    position: absolute;
+    bottom: -30px;
+    /* Отступ значения под ползунком */
+    transform: translateX(-45%);
+    white-space: nowrap;
+}
+
+.slider-container {
+    position: relative;
+    margin-top: 10px;
+    /* Регулируйте отступ, чтобы выровнять значение с ползунком */
+}
+
+/*  */
+.profit__content-calc-btn button {
+    display: flex;
+    padding: 20px 51px;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10px;
+    border: 2px solid #0FF;
+    background: #0FF;
+    box-shadow: 0px 0px 24px 0px #0B6060;
+
+    color: #0B0B0D;
+    text-align: center;
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+    margin: 68px auto 51px auto;
+}
+
+
+
+
+
+
+/*----------------------------- guarantess-------------------------------------- */
+
+.guarantess__title {
+    color: var(--absolute-white);
+    font-family: Gilroy;
+    font-size: 50px;
+    font-weight: 700;
+    padding-bottom: 8px;
+}
+
+.gurantess__row {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.guarantess__card {
+    border-radius: 10px;
+    background-color: #2A2A2A;
+    ;
+}
+
+.guarantess__card h1 {
     width: 300px;
-  }
+    color: var(--absolute-white);
+    font-family: Gilroy;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 10px 0 7px 18px;
+}
+
+.guarantess__card div {
+    height: 2px;
+    width: 100%;
+    opacity: 0.25;
+    background: var(--absolute-white);
+}
+
+.guarantess__card p {
+    width: 270px;
+    padding: 8px 0 9px 18px;
+    color: var(--absolute-white);
+
+}
+
+/* --------------------------------------case----------------------------------- */
+.case__title {
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 30px;
+}
+
+.case__list {
+    display: flex;
+    gap: 12px;
+    justify-content: space-between;
+}
+
+.case__card {
+    background-color: #2a2a2a;
+    border-radius: 20px;
+    width: 341px;
+}
+
+.case__card-image1 {
+    margin: -11px auto;
+    display: flex;
+    z-index: -1;
+    clip-path: margin-box;
+}
+
+.case__card-image3 {
+    border-radius: 20px 20px 0px 0px;
+}
+
+.case__card-title {
+    color: #FFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 14px 16px 24px;
+    font-family: Gilroy;
+    font-size: 19.323px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 92%;
+
+}
+
+.case__line {
+    opacity: 0.25;
+    background: #FFF;
+    height: 1px;
+
+}
+
+.case__card-disc {
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 17.245px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 116.5%;
+    margin: 18px 18px 0px 24px;
+    /* 20.09px */
+}
+
+.case__card-btn {
+    background-color: var(--theme-aqua);
+    margin: 18.38px 0px 11.91px 23.38px;
+    color: var(--theme-blue);
+    border-radius: 89px;
+    width: 145px;
+    height: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Gilroy;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%;
+    /* 15.4px */
+}
+
+.case__more-btn {
+    display: flex;
+    color: var(--absolute-white);
+    justify-content: center;
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+    align-items: center;
+    margin: 30px auto;
+    border-radius: 10px;
+    border: 2px solid #0FF;
+    width: 350px;
+    height: 50px;
+    box-shadow: 0px 0px 24px 0px #0B6060;
+    text-align: center;
+}
+
+/* ------------------------steps---------------------------------------------- */
+.steps__title {
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 30px;
+}
+
+.steps__item {
+    width: 1000px;
+    height: 371.96px;
+    border-radius: 20px;
+    background: linear-gradient(90deg, #2A2A2A 0%, rgba(42, 42, 42, 0.00) 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.main__lines {
+    display: flex;
+    position: relative;
+}
+
+.dashed__line {
+    position: absolute;
+    width: 15%;
+    height: 1px;
+    border: 2px dashed var(--absolute-white);
+    bottom: 3px;
+    z-index: 999;
+}
+
+.steps__line {
+    width: 100%;
+    /* Ширина линии, можно указать в пикселях или других единицах измерения */
+    height: 10px;
+    background: var(--absolute-white);
+    opacity: 0.6;
+    position: relative;
+}
+
+.steps__circle {
+    background-color: var(--absolute-white);
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 131px;
+    bottom: -5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+}
+
+.steps__circle::before {
+    content: '';
+    position: absolute;
+    width: calc(100% + 20px);
+    /* ширина элемента + ширина "бордюра" */
+    height: calc(100% + 20px);
+    /* высота элемента + высота "бордюра" */
+    top: -10px;
+    /* отрицательное значение для "бордюра" */
+    left: -10px;
+    /* отрицательное значение для "бордюра" */
+    border: 2px solid rgba(10, 255, 247, 0.5);
+    /* цвет "бордюра" и его толщина */
+    border-radius: 32px;
+    /* радиус скругления "бордюра" */
+    box-shadow: 0 0 10px rgba(10, 255, 247, 0.5);
+}
+
+.steps__circle1 {
+    background-color: var(--absolute-white);
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 263px;
+    bottom: -5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+}
+
+.steps__circle2 {
+    background-color: var(--absolute-white);
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: calc(141px + 257px);
+    bottom: -5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+}
+
+.steps__circle3 {
+    background-color: var(--absolute-white);
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: calc(316px + 264px);
+    bottom: -5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+}
+
+.steps__circle4 {
+    background-color: var(--absolute-white);
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: calc(141px + 257px + 383px);
+    bottom: -5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+}
+
+.steps__circle1::before {
+    content: '';
+    position: absolute;
+    width: calc(100% + 20px);
+    /* ширина элемента + ширина "бордюра" */
+    height: calc(100% + 20px);
+    /* высота элемента + высота "бордюра" */
+    top: -10px;
+    /* отрицательное значение для "бордюра" */
+    left: -10px;
+    /* отрицательное значение для "бордюра" */
+    border-radius: 30px;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.steps__circle2::before {
+    content: '';
+    position: absolute;
+    width: calc(100% + 20px);
+    /* ширина элемента + ширина "бордюра" */
+    height: calc(100% + 20px);
+    /* высота элемента + высота "бордюра" */
+    top: -10px;
+    /* отрицательное значение для "бордюра" */
+    left: -10px;
+    /* отрицательное значение для "бордюра" */
+    border-radius: 30px;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.steps__circle3::before {
+    content: '';
+    position: absolute;
+    width: calc(100% + 20px);
+    /* ширина элемента + ширина "бордюра" */
+    height: calc(100% + 20px);
+    /* высота элемента + высота "бордюра" */
+    top: -10px;
+    /* отрицательное значение для "бордюра" */
+    left: -10px;
+    /* отрицательное значение для "бордюра" */
+    border-radius: 30px;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.steps__circle4::before {
+    content: '';
+    position: absolute;
+    width: calc(100% + 20px);
+    /* ширина элемента + ширина "бордюра" */
+    height: calc(100% + 20px);
+    /* высота элемента + высота "бордюра" */
+    top: -10px;
+    /* отрицательное значение для "бордюра" */
+    left: -10px;
+    /* отрицательное значение для "бордюра" */
+    border-radius: 30px;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.steps__line1 {
+    width: 100%;
+    /* Ширина линии, можно указать в пикселях или других единицах измерения */
+    height: 10px;
+    background: linear-gradient(90deg, #fdfdfd 0%, rgba(31, 30, 30, 0) 100%);
+    opacity: 0.6;
+}
+
+.steps__line-small-top {
+    width: 1px;
+    height: 100%;
+    background-color: var(--absolute-white);
+    margin-left: 141px;
+}
+
+.steps__line-small-top1 {
+    width: 1px;
+    height: 100%;
+    background-color: var(--absolute-white);
+    margin-left: 57px;
+}
+
+.steps__line-small-top2 {
+    width: 1px;
+    height: 100%;
+    background-color: var(--absolute-white);
+    margin-left: 175px;
+}
+
+.steps__line-small-btm {
+    width: 1px;
+    height: 100%;
+    background-color: var(--absolute-white);
+    margin-left: 273px;
+}
+
+.steps__line-small-btm1 {
+    width: 1px;
+    height: 100%;
+    background-color: var(--absolute-white);
+    margin-left: 40px;
+}
+
+.steps__lines {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.steps__text {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    gap: 7px;
+    padding-left: 10px;
+    justify-content: center;
+    width: 276px;
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+}
+
+/* ---------------------faq------------------------------------------------------ */
+.faq__title {
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 30px;
+}
+
+.faq__rows {
+    display: flex;
+    gap: 130px;
+}
+
+.faq__row {
+    display: flex;
+    flex-direction: column;
+    gap: 40px
+}
+
+.faq__row__item {
+    border-top: #fff solid 1px;
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%;
+    width: 255px;
+    padding-top: 10px;
+    cursor: pointer;
+}
+
+.faq__row__item:first-child {
+    border-top: none;
+}
+
+.faq__row__title {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.faq__row__title p {
+    background-color: var(--theme-blue);
+    border-radius: 30px;
+    width: 23px;
+    color: #000;
+}
+
+.faq__row__disc {
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 0.5s ease-out, height 0.5s ease-out;
+}
+
+.active {
+    outline: none;
+    border: none;
+}
+
+.faq__row__item.active .faq__row__disc {
+    margin-top: 10px;
+    opacity: 1;
+    height: auto;
+    animation: fadeInDown 0.5s ease-out;
+    /* Добавляем анимацию появления */
+}
+
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* -------------------------------share-------------------------------------- */
+.share__title {
+    color: #FFF;
+    font-family: Gilroy;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 30px;
+}
+
+.share__info h2 {
+    color: #FFF;
+
+    font-family: Gilroy;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+    /* 70.4px */
+}
+
+.share__info__card__text {
+    color: #FFF;
+    margin-top: 31px;
+    text-align: center;
+    font-family: Gilroy;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    /* 33px */
+}
+
+.share__info__card {
+    display: flex;
+}
+
+.share__info__card__disc {
+    display: flex;
+    text-align: left;
+    font-family: Gilroy;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%;
+    gap: 10px;
+}
+
+.share__info__card__disc__row {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+.share__info__card__owner {
+    color: var(--absolute-white);
+    display: flex;
+    font-family: Gilroy;
+    margin: 20px 0px 20px 60px;
+    font-style: normal;
+
+    line-height: 154%;
+}
+
+.share__img__container {
+
+    position: relative;
+    border-radius: 50%;
+    /* Используйте 50% для создания круглого контейнера */
+    width: 166px;
+    height: 166px;
+    /* Установите одинаковую высоту, чтобы создать круг */
+    overflow: hidden;
+    /* Обрезать изображение, выходящее за пределы контейнера */
+}
+
+.share__img__circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    background: rgba(0, 0, 0, 0.70);
+    bottom: 0;
+    left: 8px;
+    z-index: -1;
+}
+
+.share__image__container {
+    width: 100%;
+    /* Сделайте изображение 100% ширины контейнера */
+    height: 166px;
+    /* Автоматически подстраивайте высоту, чтобы сохранить пропорции изображения */
+    display: block;
+    /* Убедитесь, что изображение корректно отображается как блочный элемент */
+}
+
+.share__info__card__owner h1 {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.share__info__card__owner p {
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.share__info__card__owner__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.share__info__input {
+    color: #FFF;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    font-family: Gilroy;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%;
+    /* 15.4px */
+}
+
+.share__info__input input {
+    width: 250px;
+    height: 50px;
+    border: #fff 1px solid;
+    border-radius: 5px;
+}
+
+.share__info__button {
+    width: 350px;
+    margin-top: 15px;
+    height: 50px;
+    border-radius: 8px;
+    background: #0FF;
+    color: var(--absolute-black);
+    box-shadow: 0px 0px 26px 0px rgba(0, 255, 255, 0.50);
+}
+
+.share__agree {
+    color: #FFF;
+    display: flex;
+    gap: 10px;
+    font-family: Gilroy;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%;
+    /* 13.2px */
+}
+
+.share__agree__link {
+    color: #006060;
+    font-family: Gilroy;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%;
+    text-decoration-line: underline;
+}
+
+/* -------------------foooooooooooooooooooooooooooooooooooter------------------------- */
+.footer {
+    background-color: #2a2a2a;
+    font-family: Gilroy;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    color: #fff;
+    margin-left: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__row { 
+    margin-left: 23px;
+    margin-right: 23px;
+    padding-top: 64px;
+    text-wrap: nowrap;
+}
+
+.footer__row__img { 
+    display: flex;
+    gap: 21px;
+}
+
+.footer__row__link { 
+    text-decoration: underline;
+    color: #fff;
+}
